--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "@capacitor/ios": "6.0.0",
     "@capacitor/keyboard": "6.0.0",
     "@capacitor/status-bar": "6.0.0",
+    "@ionic-native/http": "^5.36.0",
     "@ionic/vue": "^8.0.0",
     "@ionic/vue-router": "^8.0.0",
+    "cordova": "^12.0.0",
     "flowbite": "^2.3.0",
     "ionicons": "^7.0.0",
+    "pinia": "^2.1.7",
     "vue": "^3.3.0",
     "vue-router": "^4.2.0"
   },
